--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,24 @@
-<ion-menu [content]="content">
+<ion-menu [content]='content'>
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        Menu
+      </ion-title>
     </ion-toolbar>
   </ion-header>
-
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+      <button menuClose ion-item *ngFor="let page of appPages" (click)="openPage(page)" >
+        
+        <ion-icon slot="start" [name]="page.icon"></ion-icon>
+        {{page.title}}
+      
       </button>
     </ion-list>
   </ion-content>
-
 </ion-menu>
+
+
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
